bynkc/tests/fixtures/negative/162_type_arg_conflict/input.bynk
commons bad

fn both[A](x: A, y: A) -> A {
  x
}

fn misuse() -> Int {
  both(1, "two")
}
